# GulperIndex

./: .gitignore  Cargo.toml  README.md  Rocket.toml
src/: cards.rs  main.rs
