[package]
name = "gulper_index"
version = "0.1.0"
authors = ["Rene Damm <rene.damm@gmx.net>"]
edition = "2018"

[dependencies]
notify = "5.0.0-pre.13"
chrono = "0.4.19"
serde = "1.0.136"
serde_json = "1.0.79"

[dependencies.rocket]
version = "0.5.0-rc.1"
#features = ["json"]

[dependencies.rusqlite]
version = "0.25.0"
features = ["bundled"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["sqlite_pool"]
