[package]
name = "gulper_index"
version = "0.1.0"
authors = ["Rene Damm <rene.damm@gmx.net>"]
edition = "2018"

[dependencies]
notify = "5.0.0-pre.13"
chrono = "0.4.19"
serde = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
rusqlite = { versio = "0.25.0", features = ["bundled"] }
r2d2 = "0.8.9"
r2d2_sqlite = "0.20.0"
